<?xml version="1.0"?>
<package>
  <name>crom_common</name>
  <version>1.0.0</version>
  <description>The crom_common package. It contains CROM common packages</description>

  
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>
  <maintainer email="mbeneto@robotnik.es">Marc Benetó</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/crom_common</url>

  <author email="rnavarro@robotnik.es">Román Navarro</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>crom_description</run_depend>

  <export><metapackage/></export>

</package>
