<?xml version="1.0"?>
<package>
  <name>crom_description</name>
  <version>1.0.0</version>
  <description>The crom_description package. It contains robot's urdfs and meshes</description>


  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>
  <maintainer email="mbeneto@robotnik.es">Marc Benetó</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/crom_description</url>
  <url type="repository">https://github.com/RobotnikAutomation/crom_common.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/crom_common/issues</url>


  <author email="rnavarro@robotnik.es">Román Navarro</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
